--- a/SmartStudentHub/package.json
+++ b/SmartStudentHub/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.20",
+    "expo-calendar": "~14.0.5",
+    "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
