--- a/SmartStudentHub/package.json
+++ b/SmartStudentHub/package.json
@@ -13,25 +13,34 @@
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
+    "axios-cookiejar-support": "^5.0.5",
+    "cheerio": "^1.0.0",
     "expo": "~52.0.20",
     "expo-calendar": "~14.0.5",
     "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
+    "puppeteer": "^24.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-autocomplete-input": "^5.5.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "tough-cookie": "^5.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
