--- a/SmartStudentHub/package.json
+++ b/SmartStudentHub/package.json
@@ -13,7 +13,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -33,8 +33,12 @@
     "react-native": "0.76.5",
     "react-native-autocomplete-input": "^5.5.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
