--- a/SmartStudentHub/package.json
+++ b/SmartStudentHub/package.json
@@ -43,6 +43,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
+    "socket.io-client": "^4.8.1",
     "tough-cookie": "^5.1.0",
     "winston": "^3.17.0"
   },
