--- a/SmartStudentHub/package.json
+++ b/SmartStudentHub/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.8.0",
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -21,6 +22,7 @@
     "axios": "^1.7.9",
     "axios-cookiejar-support": "^5.0.5",
     "cheerio": "^1.0.0",
+    "ethers": "^5.7.2",
     "expo": "~52.0.20",
     "expo-calendar": "~14.0.5",
     "expo-sharing": "~13.0.0",
@@ -35,6 +37,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dropdown": "^2.3.1",
