Implemented the chatbot page with all functioanlity
Used llama3

--- a/SmartStudentHub/Backend/.env
+++ b/SmartStudentHub/Backend/.env
@@ -1,3 +1,6 @@
 PORT=5002
 MONGO_URI=mongodb+srv://test_user1:(Somethingnew1)@cluster0.zu2as.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET="shajsjashjadjashdajsdj"
+OLLAMA_BASE_URL=http://localhost:11434
+TEXT_MODEL=llama3:8b
+VISION_MODEL=llava-next:7b
