--- a/SmartStudentHub/package.json
+++ b/SmartStudentHub/package.json
@@ -23,6 +23,8 @@
     "cheerio": "^1.0.0",
     "expo": "~52.0.20",
     "expo-calendar": "~14.0.5",
+    "expo-document-picker": "~13.0.3",
+    "expo-image-picker": "~16.0.6",
     "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
     "fs": "^0.0.1-security",
